--- a/Eismanufaktur/Style.css
+++ b/Eismanufaktur/Style.css
@@ -56,7 +56,7 @@ h4 {
 
 #total {
     position: fixed;
-    top: 850px;
+    top: 150px;
     color: white;
     right: 22px;
 }
@@ -98,8 +98,8 @@ h4 {
 #Nuss p{
     color: white;
     position: absolute;
-    top: -263px;
-    right: 165px;
+    top: -193px;
+    right: 158px;
 }
 #Pistazie {
     position: absolute;
@@ -109,18 +109,19 @@ h4 {
 #Pistazie p {
     color: white;
     position: absolute;
-    top: 400px;
-    right: 165px;
+    top: -163px;
+    right: 0px;
 }
 #Heidelbeeren {
     position: absolute;
-    top: 149px;
+    z-index: 800;
+    top: 250px;
 }
 #Heidelbeeren p {
     color: white;
     position: absolute;
-    top: 575px;
-    right: 91px;
+    top: -110px;
+    right: -15px;
 }
 #Schokolade {
     position: absolute;
@@ -129,8 +130,8 @@ h4 {
 #Schokolade p {
     color: white;
     position: absolute;
-    top: 400px;
-    right: 165px;
+    top: -78px;
+    right: 30px;
 }
 #Schokostreusel {
     position: absolute;
@@ -140,8 +141,8 @@ h4 {
 #Schokostreusel p{
     color: white;
     position: absolute;
-    top: 522px;
-    right: 80px;
+    top: -48px;
+    right: 70px;
 }
 #Vanille{
     position: absolute;
@@ -185,14 +186,6 @@ h4 {
     position: absolute;
     top: -362px;
     right: 19px;
-}
-#gesamtLoeschen{
-    position: absolute;
-    width: 14%;
-    top: 68%;
-    right: 1%;
-    background-color: rgb(161, 139, 112);
-    border-radius: 20px 20px 20px 20px;
 }
 
 h1 {
@@ -264,14 +257,14 @@ body{
 }
 
 footer {
-    position: absolute;
     color: white;
     background-color:  rgb(66, 42, 58);
     margin: 0;
     width: 100%;
     height: 75px;
     text-align: center;
-    bottom: 0;
+    position: absolute;
+    bottom: -300px;
 }
 .verfasser{
     color: rgb(255, 255, 255);
