--- a/Eismanufaktur/StyleWarenkorb.css
+++ b/Eismanufaktur/StyleWarenkorb.css
@@ -107,12 +107,13 @@ h3{
 #Nuss {
     position: absolute;
     top: 300px;
+    right: 16px;
 }
 #Nuss p{
-    color: white;
+    color: rgb(0, 0, 0);
     position: absolute;
-    top: 400px;
-    right: 165px;
+    top: -193px;
+    right: 158px;
 }
 #Pistazie {
     position: absolute;
@@ -120,30 +121,34 @@ h3{
     right: 56px;
 }
 #Pistazie p {
-    color: white;
+    color: rgb(0, 0, 0);
     position: absolute;
-    top: 400px;
-    right: 165px;
+    top: -163px;
+    right: 0px;
 }
 #Heidelbeeren {
     position: absolute;
-    top: 149px;
+    z-index: 800;
+    top: 250px;
+    right: 16px;
 }
 #Heidelbeeren p {
-    color: white;
+    color: rgb(0, 0, 0);
     position: absolute;
-    top: 575px;
-    right: 91px;
+    top: -110px;
+    right: 5px;
 }
 #Schokolade {
     position: absolute;
     top: 218px;
+    right: 100px;
+    z-index: 10;
 }
 #Schokolade p {
-    color: white;
+    color: rgb(0, 0, 0);
     position: absolute;
-    top: 400px;
-    right: 165px;
+    top: -78px;
+    right: 30px;
 }
 #Schokostreusel {
     position: absolute;
@@ -151,10 +156,10 @@ h3{
     right: 35px;
 }
 #Schokostreusel p{
-    color: white;
+    color: rgb(0, 0, 0);
     position: absolute;
-    top: 522px;
-    right: 80px;
+    top: -48px;
+    right: 70px;
 }
 #Vanille{
     position: absolute;
@@ -162,10 +167,10 @@ h3{
     right: 38px;
 }
 #Vanille p{
-    color: white;
+    color: rgb(0, 0, 0);
     position: absolute;
-    top: 400px;
-    right: 165px;
+    top: -290px;
+    right: 23px;
 }
 #Eiswaffel{
     position: absolute;
@@ -173,20 +178,22 @@ h3{
     right: 70px;
 }
 #Eiswaffel p {
-    color: white;
+    color: rgb(0, 0, 0);
     position: absolute;
-    top: 400px;
-    right: 165px;
+    top: -375px;
+    right: 76px;
 }
 #Orange{
     position: absolute;
     top: 343px;
+    right: 56px;
+    z-index:10;
 }
 #Orange p{
-    color: white;
+    color: rgb(0, 0, 0);
     position: absolute;
-    top: 400px;
-    right: 165px;
+    top: -271px;
+    right: 103px;
 }
 #Becher {
     position: absolute;
@@ -194,64 +201,10 @@ h3{
     right: 43px;
 }
 #Becher p{
-    color: white;
+    color: rgb(0, 0, 0);
     position: absolute;
-    top: 400px;
-    right: 165px;
-}
-#gesamtLoeschen{
-    position: absolute;
-    width: 14%;
-    top: 68%;
-    right: 1%;
-    background-color: rgb(161, 139, 112);
-    border-radius: 20px 20px 20px 20px;
-}
-
-h1 {
-    height: 60px;
-    color: rgb(139, 58, 111);
-    padding-top: 30px;
-}
-
-.inhaltWaffel{
-    width: 80%;
-    display: grid;
-    padding: 5px 0px 00px 0px;
-    margin-top: -2.5%;
-    margin-bottom: 3%;
-}
-
-.inhaltEis{
-    width: 80%;
-    display: grid;
-    padding: 5px 0px 00px 0px;
-    margin-top: -2.5%;
-    margin-bottom: 3%;
-}
-.inhaltTopping{
-    width: 80%;
-    display: grid;
-    padding: 5px 0px 00px 0px;
-    margin-top: -2.5%;
-    margin-bottom: 3%;
-}
-
-#waffel {
-    margin-top: 0;
-    Display: inline-grid;
-    grid-template-columns: auto auto;  
-}
-#eis  {
-    margin-top: 0;
-    Display: inline-grid;
-    grid-template-columns: auto auto auto auto; 
-}
-
-#topping{
-    margin-top: 0;
-    Display: inline-grid;
-    grid-template-columns: auto auto auto; 
+    top: -362px;
+    right: 19px;
 }
 
 main{
@@ -283,14 +236,14 @@ body{
 }
 
 footer {
-    position: absolute;
     color: white;
     background-color:  rgb(66, 42, 58);
     margin: 0;
     width: 100%;
     height: 75px;
     text-align: center;
-    bottom: 0;
+    position: absolute;
+    bottom: -1020px
 }
 .verfasser{
     color: rgb(255, 255, 255);
